# Power-Generation-Eclipse-SW

./: .gitignore  CMakeLists.txt  Eclipse.drawio  Eclipse.pyproject  README.md  README_NEW.md  eclipse.py  main.py  main.qml  module_vis.py  module_vis_mp.py  package-lock.json  package.json  regime.py  requirements.txt  results.csv  source_main.py
.github/workflows/: main.yml
ArraySimulation/: .gitignore  PVSim.py  README.md  pytest.ini  requirements.txt
ArraySimulation/Controller/: Console.py  DataController.py  Graph.py  MPPTView.py  SourceView.py  UIController.py  View.py
ArraySimulation/DCDCConverter/: DCDCConverter.py
ArraySimulation/MPPT/: MPPT.cpp  MPPT.h  MPPT.py
ArraySimulation/PVEnvironment/: PVEnvironment.py  jsonInterp.py
ArraySimulation/PVSource/: PVSource.cpp  PVSource.h  PVSource.py
ArraySimulation/docs/: GlobalAlgorithms.md  MPPTSystem.md
Eclipse/: README.md  angular.json  package-lock.json  package.json
Py2C/: MPPT.cpp
about/: controller.py
angular/: package-lock.json  package.json
angular-no-ssr/: README.md  angular.json  package-lock.json  package.json
data/: withVersion_2023-02-04_14-03-18.capture
docs/: .$Eclipse.drawio.bkp  DESIGN.md  Eclipse.drawio  TODO.md
logic/: about_controller.py  file_io.py  pv_designer_controller.py  sim_controller.py
old/: Untitled-1.py  Untitled-2.py
power_gen_sim/: controller.py  ui_controller.py
pv_capture/: controller.py  pv_characterization.py  ui_controller.py
sim_designer/: controller.py  ui_controller.py
src/: cell.py  simulation.py  source.py  source_file.py
(+242 files in other folders)
